@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.dr.dk.bonanza" version="2.1.2" name="DR.dk Bonanza" provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.dr.dk.bonanza" version="2.1.3" name="DR.dk Bonanza" provider-name="twinther [tommy@winther.nu]">
     <requires>
         <import addon="xbmc.python" version="2.0"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
